syntax = "proto3";

package com.ecommerce.proto;

option java_package = "com.ecommerce.proto";
option java_outer_classname = "OrderProto";

// Order Service - gRPC cho orchestration phức tạp
service OrderService {
  // Unary RPC - Create order (orchestrates user, product, inventory)
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);

  // Unary RPC - Get order details
  rpc GetOrder(GetOrderRequest) returns (OrderResponse);

  // Server Streaming - Get user orders
  rpc GetUserOrders(GetUserOrdersRequest) returns (stream OrderResponse);

  // Unary RPC - Update order status
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (OrderResponse);
}

enum OrderStatus {
  PENDING = 0;
  CONFIRMED = 1;
  PROCESSING = 2;
  SHIPPED = 3;
  DELIVERED = 4;
  CANCELLED = 5;
}

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
  double unit_price = 3;
  double total_price = 4;
}

message Order {
  string id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  double total_amount = 4;
  OrderStatus status = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}

message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItem items = 2;
}

message GetOrderRequest {
  string order_id = 1;
}

message GetUserOrdersRequest {
  string user_id = 1;
  int32 limit = 2;
}

message UpdateOrderStatusRequest {
  string order_id = 1;
  OrderStatus status = 2;
}

message OrderResponse {
  bool success = 1;
  string message = 2;
  Order order = 3;
}